<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color1"
    tools:context=".EditTambahNote">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/tambah_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button"
            android:text="tambah" />

        <Button
            android:id="@+id/simpan_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button"
            android:text="simpan" />

        <Button
            android:id="@+id/lihat_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button"
            android:text="lihat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/id_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="20pt"
                android:textSize="12pt"
                android:layout_margin="10dp"
                android:layout_below="@id/id_note"
                android:hint="title"
                android:paddingLeft="2dp"
                android:background="@drawable/rounded_textfield"/>

            <EditText
                android:inputType="textMultiLine"
                android:layout_marginTop="5dp"
                android:paddingLeft="2dp"
                android:layout_margin="10dp"
                android:id="@+id/content"
                android:gravity="center_vertical|left|top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title"
                android:layout_alignParentBottom="true"
                android:hint="content"
                android:background="@drawable/rounded_textfield"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>